--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "gatsby": "^5.4.2",
+    "gatsby-plugin-image": "^3.5.0",
+    "gatsby-plugin-sharp": "^5.5.0",
+    "gatsby-source-filesystem": "^5.5.0",
+    "gatsby-transformer-sharp": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
